syntax = "proto3";
package google.protobuf;
option csharp_namespace = "Proto.Dota";
option cc_generic_services = false;

enum NET_Messages {
	net_NOP = 0;
	net_Disconnect = 1;
	net_File = 2;
	net_SplitScreenUser = 3;
	net_Tick = 4;
	net_StringCmd = 5;
	net_SetConVar = 6;
	net_SignonState = 7;
	net_SpawnGroup_Load = 8;
	net_SpawnGroup_ManifestUpdate = 9;
	net_SpawnGroup_SetCreationTick = 11;
	net_SpawnGroup_Unload = 12;
	net_SpawnGroup_LoadCompleted = 13;
	net_ReliableMessageEndMarker = 14;
    net_PlayerAvatarData = 100;
}

enum SIGNONSTATE {
	SIGNONSTATE_NONE = 0;
	SIGNONSTATE_CHALLENGE = 1;
	SIGNONSTATE_CONNECTED = 2;
	SIGNONSTATE_NEW = 3;
	SIGNONSTATE_PRESPAWN = 4;
	SIGNONSTATE_SPAWN = 5;
	SIGNONSTATE_FULL = 6;
	SIGNONSTATE_CHANGELEVEL = 7;
}

enum SpawnGroupFlags_t {
	SPAWN_GROUP_UNKNOWN = 0;
	SPAWN_GROUP_LOAD_ENTITIES_FROM_SAVE = 1;
	SPAWN_GROUP_DONT_SPAWN_ENTITIES = 2;
	SPAWN_GROUP_SYNCHRONOUS_SPAWN = 4;
	SPAWN_GROUP_IS_INITIAL_SPAWN_GROUP = 8;
	SPAWN_GROUP_CREATE_CLIENT_ONLY_ENTITIES = 16;
	SPAWN_GROUP_SAVE_ENTITIES = 32;
	SPAWN_GROUP_BLOCK_UNTIL_LOADED = 64;
	SPAWN_GROUP_LOAD_STREAMING_DATA = 128;
	SPAWN_GROUP_CREATE_NEW_SCENE_WORLD = 256;
}

enum ENetworkDisconnectionReason {
	NETWORK_DISCONNECT_INVALID = 0;
	NETWORK_DISCONNECT_SHUTDOWN = 1;
	NETWORK_DISCONNECT_DISCONNECT_BY_USER = 2;
	NETWORK_DISCONNECT_DISCONNECT_BY_SERVER = 3;
	NETWORK_DISCONNECT_LOST = 4;
	NETWORK_DISCONNECT_OVERFLOW = 5;
	NETWORK_DISCONNECT_STEAM_BANNED = 6;
	NETWORK_DISCONNECT_STEAM_INUSE = 7;
	NETWORK_DISCONNECT_STEAM_TICKET = 8;
	NETWORK_DISCONNECT_STEAM_LOGON = 9;
	NETWORK_DISCONNECT_STEAM_AUTHCANCELLED = 10;
	NETWORK_DISCONNECT_STEAM_AUTHALREADYUSED = 11;
	NETWORK_DISCONNECT_STEAM_AUTHINVALID = 12;
	NETWORK_DISCONNECT_STEAM_VACBANSTATE = 13;
	NETWORK_DISCONNECT_STEAM_LOGGED_IN_ELSEWHERE = 14;
	NETWORK_DISCONNECT_STEAM_VAC_CHECK_TIMEDOUT = 15;
	NETWORK_DISCONNECT_STEAM_DROPPED = 16;
	NETWORK_DISCONNECT_STEAM_OWNERSHIP = 17;
	NETWORK_DISCONNECT_SERVERINFO_OVERFLOW = 18;
	NETWORK_DISCONNECT_TICKMSG_OVERFLOW = 19;
	NETWORK_DISCONNECT_STRINGTABLEMSG_OVERFLOW = 20;
	NETWORK_DISCONNECT_DELTAENTMSG_OVERFLOW = 21;
	NETWORK_DISCONNECT_TEMPENTMSG_OVERFLOW = 22;
	NETWORK_DISCONNECT_SOUNDSMSG_OVERFLOW = 23;
	NETWORK_DISCONNECT_SNAPSHOTOVERFLOW = 24;
	NETWORK_DISCONNECT_SNAPSHOTERROR = 25;
	NETWORK_DISCONNECT_RELIABLEOVERFLOW = 26;
	NETWORK_DISCONNECT_BADDELTATICK = 27;
	NETWORK_DISCONNECT_NOMORESPLITS = 28;
	NETWORK_DISCONNECT_TIMEDOUT = 29;
	NETWORK_DISCONNECT_DISCONNECTED = 30;
	NETWORK_DISCONNECT_LEAVINGSPLIT = 31;
	NETWORK_DISCONNECT_DIFFERENTCLASSTABLES = 32;
	NETWORK_DISCONNECT_BADRELAYPASSWORD = 33;
	NETWORK_DISCONNECT_BADSPECTATORPASSWORD = 34;
	NETWORK_DISCONNECT_HLTVRESTRICTED = 35;
	NETWORK_DISCONNECT_NOSPECTATORS = 36;
	NETWORK_DISCONNECT_HLTVUNAVAILABLE = 37;
	NETWORK_DISCONNECT_HLTVSTOP = 38;
	NETWORK_DISCONNECT_KICKED = 39;
	NETWORK_DISCONNECT_BANADDED = 40;
	NETWORK_DISCONNECT_KICKBANADDED = 41;
	NETWORK_DISCONNECT_HLTVDIRECT = 42;
	NETWORK_DISCONNECT_PURESERVER_CLIENTEXTRA = 43;
	NETWORK_DISCONNECT_PURESERVER_MISMATCH = 44;
	NETWORK_DISCONNECT_USERCMD = 45;
	NETWORK_DISCONNECT_REJECTED_BY_GAME = 46;
	NETWORK_DISCONNECT_MESSAGE_PARSE_ERROR = 47;
	NETWORK_DISCONNECT_INVALID_MESSAGE_ERROR = 48;
	NETWORK_DISCONNECT_BAD_SERVER_PASSWORD = 49;
	NETWORK_DISCONNECT_DIRECT_CONNECT_RESERVATION = 50;
	NETWORK_DISCONNECT_CONNECTION_FAILURE = 51;
	NETWORK_DISCONNECT_NO_PEER_GROUP_HANDLERS = 52;
	NETWORK_DISCONNECT_RECONNECTION = 53;
}

message CMsgVector {
	  float x = 1;
	  float y = 2;
	  float z = 3;
}

message CMsgVector2D {
	  float x = 1;
	  float y = 2;
}

message CMsgQAngle {
	  float x = 1;
	  float y = 2;
	  float z = 3;
}

message CMsgRGBA {
	  int32 r = 1;
	  int32 g = 2;
	  int32 b = 3;
	  int32 a = 4;
}

message CMsgPlayerInfo {
	  string name = 1;
	  fixed64 xuid = 2;
	  int32 userid = 3;
	  fixed64 steamid = 4;
	  bool fakeplayer = 5;
	  bool ishltv = 6;
	repeated fixed32 customFiles = 7;
	  int32 filesDownloaded = 8;
}

message CMsg_CVars {
	message CVar {
		  string name = 1;
		  string value = 2;
	}

	repeated CMsg_CVars.CVar cvars = 1;
}

message CNETMsg_NOP {
}

message CNETMsg_SplitScreenUser {
	  int32 slot = 1;
}

message CNETMsg_Disconnect {
	  ENetworkDisconnectionReason reason = 2 ;
}

message CNETMsg_File {
	  int32 transfer_id = 1;
	  string file_name = 2;
	  bool is_replay_demo_file = 3;
	  bool deny = 4;
	  bool is_file_requested = 5;
}

message CNETMsg_Tick {
	  uint32 tick = 1;
	  uint32 host_frametime = 2;
	  uint32 host_frametime_std_deviation = 3;
	  uint32 host_computationtime = 4;
	  uint32 host_computationtime_std_deviation = 5;
	  uint32 host_framestarttime_std_deviation = 6;
	  uint32 host_loss = 7;
}

message CNETMsg_StringCmd {
	  string command = 1;
}

message CNETMsg_SetConVar {
	  CMsg_CVars convars = 1;
}

message CNETMsg_SignonState {
	  uint32 signon_state = 1;
	  uint32 spawn_count = 2;
	  uint32 num_server_players = 3;
	repeated string players_networkids = 4;
	  string map_name = 5;
	  string addons = 6;
}

message CSVCMsg_GameEvent {
	message key_t {
		  int32 type = 1;
		  string val_string = 2;
		  float val_float = 3;
		  int32 val_long = 4;
		  int32 val_short = 5;
		  int32 val_byte = 6;
		  bool val_bool = 7;
		  uint64 val_uint64 = 8;
	}

	  string event_name = 1;
	  int32 eventid = 2;
	repeated CSVCMsg_GameEvent.key_t keys = 3;
}

message CSVCMsgList_GameEvents {
	message event_t {
		  int32 tick = 1;
		  CSVCMsg_GameEvent event = 2;
	}

	repeated CSVCMsgList_GameEvents.event_t events = 1;
}

message CSVCMsg_UserMessage {
	  int32 msg_type = 1;
	  bytes msg_data = 2;
}

message CSVCMsgList_UserMessages {
	message usermsg_t {
		  int32 tick = 1;
		  CSVCMsg_UserMessage msg = 2;
	}

	repeated CSVCMsgList_UserMessages.usermsg_t usermsgs = 1;
}

message CNETMsg_SpawnGroup_Load {
	  string worldname = 1;
	  string entitylumpname = 2;
	  string entityfiltername = 3;
	  uint32 spawngrouphandle = 4;
	  uint32 spawngroupownerhandle = 5;
	  CMsgVector world_offset_pos = 6;
	  CMsgQAngle world_offset_angle = 7;
	  bytes spawngroupmanifest = 8;
	  uint32 flags = 9;
	  int32 tickcount = 10;
	  bool manifestincomplete = 11;
	  string localnamefixup = 12;
	  string parentnamefixup = 13;
	  int32 manifestloadpriority = 14;
	  uint32 worldgroupid = 15;
	  uint32 creationsequence = 16;
	  string savegamefilename = 17;
	  uint32 spawngroupparenthandle = 18;
}

message CNETMsg_SpawnGroup_ManifestUpdate {
	  uint32 spawngrouphandle = 1;
	  bytes spawngroupmanifest = 2;
	  bool manifestincomplete = 3;
}

message CNETMsg_SpawnGroup_SetCreationTick {
	  uint32 spawngrouphandle = 1;
	  int32 tickcount = 2;
	  uint32 creationsequence = 3;
}

message CNETMsg_SpawnGroup_Unload {
	  uint32 spawngrouphandle = 1;
	  uint32 flags = 2;
	  int32 tickcount = 3;
}

message CNETMsg_SpawnGroup_LoadCompleted {
	  uint32 spawngrouphandle = 1;
}

message CSVCMsg_GameSessionConfiguration {
	  bool is_multiplayer = 1;
	  bool is_loadsavegame = 2;
	  bool is_background_map = 3;
	  bool is_headless = 4;
	  uint32 min_client_limit = 5;
	  uint32 max_client_limit = 6;
	  uint32 max_clients = 7;
	  fixed32 tick_interval = 8;
	  string hostname = 9;
	  string savegamename = 10;
	  string s1_mapname = 11;
	  string gamemode = 12;
	  string server_ip_address = 13;
	  bytes data = 14;
	  bool is_localonly = 15;
	  bool is_transition = 16;
	  string previouslevel = 17;
	  string landmarkname = 18;
}

message CNETMsg_ReliableMessageEndMarker {
}

message CNETMsg_PlayerAvatarData {
	  uint32 accountid = 1;
	  bytes rgb = 2;
}
